--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,8 @@
 		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
 		<title>Yum-Buger!</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="/assets/js/cats.js"></script>
+		{{!-- script src was cats.js in the CATS activity --}}
+		<script src="./public/assets/js/burgers.js"></script>
 	</head>
 	<body>
 		{{{ body }}}
