html rendering without burgers database information

--- a/views/partials/burger-block.handlebars
+++ b/views/partials/burger-block.handlebars
@@ -1,9 +1,9 @@
 <li>
 	{{name}}
 
-	<button class="change-sleep" data-id="{{id}}" data-newsleep="{{sleep}}">
-		{{#if sleep}}SLEEP TIME!{{else}}WAKE UP!{{/if}}
+	<button class="change-eaten" data-id="{{id}}" data-neweaten="{{devoured}}">
+		{{#if sleep}}TAKE A BITE{{else}}PASS{{/if}}
 	</button>
 
-	<button class="delete-cat" data-id="{{this.id}}">DELETE!</button>
+	<button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
 </li>
