--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,31 +1,31 @@
-<h1>Cats!</h1>
+<h1>Yum-Burger</h1>
 
-<h2>Cats that are not sleepy!</h2>
+<h2>On the Menu Today</h2>
 
 <ul>
-  {{#each cats}}
-    {{#unless sleepy}}
-      {{> cats/cat-block sleep=true}}
+  {{#each burgers}}
+    {{#unless devoured}}
+      {{> burger-block devoured=false}}
     {{/unless}}
   {{/each}}
 </ul>
 
-<h2>Cats that are sleepy!</h2>
+<h2>Burgers I Have Eaten</h2>
 
 <ul>
-  {{#each cats}}
-    {{#if sleepy}}
-      {{> cats/cat-block sleep=false}}
+  {{#each burgers}}
+    {{#if devoured}}
+      {{> burger-block devoured=true}}
     {{/if}}
   {{/each}}
 </ul>
 
-<h2>Add a Cat</h2>
+<h2>Add a Burger</h2>
 <form class="create-form">
 
   <div class="form-group">
-    <label for="ca">Cat Name:</label>
-    <input type="text" id="ca" name="name">
+    <label for="ca">Burger Name:</label>
+    <input type="text" id="ca" name="burger_name">
   </div>
 
   <div class="form-group">
@@ -34,5 +34,5 @@
     <input type="radio" name="sleepy" value="0"> Awake
   </div>
 
-  <button type="submit">Add Cat</button>
+  <button type="submit">Add Burger</button>
 </form>
