--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
-		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-		<title>Yum-Buger!</title>
-		<script src="https://code.jquery.com/jquery.js"></script>
-		{{!-- script src was cats.js in the CATS activity --}}
-		<script src="./public/assets/js/burgers.js"></script>
-	</head>
-	<body>
-		{{{ body }}}
-	</body>
+	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+	<title>Yum-Buger!</title>
+	<script src="https://code.jquery.com/jquery.js"></script>
+	{{!-- script src was cats.js in the CATS activity --}}
+</head>
+
+<body>
+	{{{ body }}}
+	<script src="assets/js/script.js"></script>
+
+</body>
+
 </html>
