--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <h1>Yum-Burger</h1>
 
-<h2>On the Menu Today</h2>
+<h2>Burgers I Plan to Eat</h2>
 
 <ul>
   {{#each burgers}}
@@ -28,11 +28,11 @@
     <input type="text" id="ca" name="burger_name">
   </div>
 
-  <div class="form-group">
+  {{!-- <div class="form-group">
     <label for="sleepy">Sleepy?</label><br>
     <input type="radio" name="sleepy" value="1" checked> Sleepy!<br>
     <input type="radio" name="sleepy" value="0"> Awake
-  </div>
+  </div> --}}
 
   <button type="submit">Add Burger</button>
 </form>
