--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,17 @@
+body {
+  background-image: url("assets/img/stockvault-fast-food-food-processors-concept221164.jpg");
+  /* background-repeat: no-repeat, repeat; */
+  background-color: #cccccc;
+  /* background-size: cover; */
+}
+
+h1 {
+  font-style: oblique;
+  font-size: 50px;
+  color: rgb(109, 47, 47);
+  text-align: center;
+}
+
 li {
     padding: 5px;
     margin: 5px;
