--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,38 +1,74 @@
 <h1>Yum-Burger</h1>
+<h4>What are Your Burger Plans?</h4>
 
-<h2>Burgers I Plan to Eat</h2>
+<br>
+<br>
 
-<ul>
-  {{#each burgers}}
-    {{#unless devoured}}
-      {{> burger-block devoured=false}}
-    {{/unless}}
-  {{/each}}
-</ul>
-
-<h2>Burgers I Have Eaten</h2>
-
-<ul>
-  {{#each burgers}}
-    {{#if devoured}}
-      {{> burger-block devoured=true}}
-    {{/if}}
-  {{/each}}
-</ul>
-
-<h2>Add a Burger</h2>
-<form class="create-form">
-
-  <div class="form-group">
-    <label for="ca">Burger Name:</label>
-    <input type="text" id="ca" name="burger_name">
+<div class="container burger-menu">
+  <div class="row">
+    {{!-- Card for uneaten burgers --}}
+    <div class="col-sm-6">
+      <div class="card">
+        <img src="/assets/img/burger-5538285_640.png" width="150" height="400" class="card-img-top" alt="...">
+        <div class="card-body">
+          {{!-- <p class="card-text">Burgers I Plan to Eat</p> --}}
+          <h2 class="card-text">Burgers I Plan to Eat</h2>
+          <ul class="list-group list-group-item justify-content-left">
+            {{#each burgers}}
+            {{#unless devoured}}
+            {{> burger-block devoured=false}}
+            {{/unless}}
+            {{/each}}
+          </ul>
+        </div>
+      </div>
+    </div>
+    {{!-- Card for eaten burgers --}}
+    <div class="col-6">
+      <div class="card">
+        <img src="/assets/img/burger-5538285_640.png" width="150" height="400" class="card-img-top" alt="...">
+        <div class="card-body">
+          {{!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> --}}
+          <h2 class="card-text">Burgers I Have Eaten</h2>
+          <ul class="list-group">
+            {{#each burgers}}
+            {{#if devoured}}
+            {{> burger-block devoured=true}}
+            {{/if}}
+            {{/each}}
+          </ul>
+        </div>
+      </div>
+    </div>
   </div>
+</div>
 
-  {{!-- <div class="form-group">
-    <label for="sleepy">Sleepy?</label><br>
-    <input type="radio" name="sleepy" value="1" checked> Sleepy!<br>
-    <input type="radio" name="sleepy" value="0"> Awake
-  </div> --}}
+<br>
+{{!-- container for adding a burger --}}
+<div class="container">
+  <div class="row">
+    <div class="col-4"></div>
+    <div class="add-burger col-4">
+      <h2>Add a Burger</h2>
 
-  <button type="submit">Add Burger</button>
-</form>
+      <form class="create-form">
+        <div class="form-group">
+          <label for="ca">Burger Name:</label>
+          <input type="text" id="ca" name="burger_name">
+        </div>
+        <button type="submit">Add Burger</button>
+      </form>
+    </div>
+  </div>
+</div>
+
+</div>
+
+<footer class="footer mt-auto py-3">
+  <div class="container-fluid">
+    <span class="footer-text">Mary W. Ervin | Burgerfest | September 2020
+    </span>
+    <br>
+    <a href='https://www.freepik.com/photos/background'>Background photo created by tirachard - www.freepik.com</a>
+  </div>
+</footer>
