--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 <h1>Yum-Burger</h1>
-<h4>What are Your Burger Plans?</h4>
+<h4>What are <i>Your</i> Burger Plans?</h4>
 
 <br>
 <br>
@@ -9,11 +9,11 @@
     {{!-- Card for uneaten burgers --}}
     <div class="col-sm-6">
       <div class="card">
-        <img src="/assets/img/burger-5538285_640.png" width="150" height="400" class="card-img-top" alt="...">
+        <img src="/assets/img/burger-5538285_640.png" class="card-img-top" alt="Burger">
         <div class="card-body">
           {{!-- <p class="card-text">Burgers I Plan to Eat</p> --}}
           <h2 class="card-text">Burgers I Plan to Eat</h2>
-          <ul class="list-group list-group-item justify-content-left">
+          <ul class="list-group justify-content-left">
             {{#each burgers}}
             {{#unless devoured}}
             {{> burger-block devoured=false}}
@@ -24,13 +24,13 @@
       </div>
     </div>
     {{!-- Card for eaten burgers --}}
-    <div class="col-6">
+    <div class="col-sm-6">
       <div class="card">
-        <img src="/assets/img/burger-5538285_640.png" width="150" height="400" class="card-img-top" alt="...">
+        <img src="/assets/img/burger-5538285_640.png" class="card-img-top" alt="Burger">
         <div class="card-body">
           {{!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> --}}
           <h2 class="card-text">Burgers I Have Eaten</h2>
-          <ul class="list-group">
+          <ul class="list-group justify-content-left">
             {{#each burgers}}
             {{#if devoured}}
             {{> burger-block devoured=true}}
