--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,7 +13,7 @@
         <div class="card-body">
           {{!-- <p class="card-text">Burgers I Plan to Eat</p> --}}
           <h2 class="card-text">Burgers I Plan to Eat</h2>
-          <ul class="list-group justify-content-left">
+          <ul class="list-group list-group-flush">
             {{#each burgers}}
             {{#unless devoured}}
             {{> burger-block devoured=false}}
@@ -30,7 +30,7 @@
         <div class="card-body">
           {{!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> --}}
           <h2 class="card-text">Burgers I Have Eaten</h2>
-          <ul class="list-group justify-content-left">
+          <ul class="list-group list-group-flush">
             {{#each burgers}}
             {{#if devoured}}
             {{> burger-block devoured=true}}
